KnownProblem;
some homebrew not work fine
certain game,keybord PSP freeze(BUSOSINKI etc)
doesnot work fine unknown value search
if code is reloaded & saved many times,save&reload function doesnot work
certain float,doesnot display (0.01,0.001)
as for 8byte RAMeditor,strange copy position
0x8838DBF0 moviezone,pspfat should freeze after search/save...slim user use extraram setting

2011/4/12
NPR/CWCフラグ変更時bit情報を継続するように修正
JOKER/DMA時はBIT変更できないよう修正
bit変更をアライメント例外がおきない範囲で拡張(BYTE->WORD アドレス偶数,WORD->DWORD アドレス4倍数)
8bit/16bitCWCこーどが復元ありになっていたので修正
#CWC NO RESTORE FIX
0x20001000 0x11
0x20001002 0x2222
0x20001004 0x44444444
0xFF000300 0x00000000
0x20001000 0x10
0x20001002 0x2020
0x20001004 0x40404040

2011/3/31
コードアドレスを変更したときポインタコードの復号値がベースアドレス+オフセットになってなかったので修正
無効なベースアドレスの時コードが実行されていたので実行しないように修正
FFFFFFFF 00000000 //
00001000 11111111 //修正前は1000に書き込まれてしまう

2011/3/16
cwchbを使わないけどびるどできるようにした
aloader1.24/custompromethesu/prometheus以外ろだ(openisoloader/aloader120以前)は古いため廃止

2011/3/15
プロメテウス他ろだ経由のID処理を改善
サーチ結果ジャンプを結果最大以上にならないよう修正

2011/3/7
スクリーンショットが0xFFFFFFFF以外の時パッドボタンがマスクされていたので修正

2011/3/6
一部ホームブリューで起動障害が残ってるためNOHBビルドまけふぁいる追加
とりえずCUSTOM16専用しかつかえんけどアナログの左/右をパッドボタン化。カーネルパッドの未使用BITを使用。
アナログ左 0x0400 L2代用
アナログ右 0x0800 R2代用
アナログ下 0x0C00 L2+R2代用,たまにしか効かない？

2011/3/4
joker/dmaのアドレスが0x1800000以上にできたので修正
decoder時セレクト+十字キーでサーチ結果のアドレスに飛べるようにした,メニュー右下にジャンプ番号表示
サーチ結果のアドレスコピー時ジャンプ番号連動
ジャンプ変換アドレス+8に変更,論理和になっていたので修正
0x0A200002 + ((copyData-0x8800000)>>2);
例;0x233BC0　→ 0x0A228CEF2 j 0x233BC0+8

decoderからコードを足した際ポップアップメニューがdecode時のものになっていたので修正
□押しメニューでアドレス+1のジャンプ命令貼りつけ追加
例;0x233BC0　→ 0x0A228CEF1 j 0x233BC0+4

2011/3/2
vmfvc/vmtvcがまちがってたっぽいので修正
cwcflagとjokermaskにディレイを追加
拡張RAM定義を0x1000ずらした

2011/2/22
半浮動小数表示のバッファがのこってたので修正
半浮動小数の行間がでかい/切り替え時フリーズするのを修正
□押しでパッドコードマスクタイプになるよう変更
CWC<>NPRでDMAの時のみアドレス初期化し、他はフラグをいじるだけに変更

20011/2/7
635PROでもID取得できるように修正

2011/1/24
GAMEID取得方法を何度でもでるまで取得するように変更

2011/1/21
635PRO対応版同梱

2011/1/15
チート名が32文字以上だとalways on のときはみ出すので32文字以内に修正
キーボードのバグも32文字以上クリアーしてるのが原因ぽいので修正

2011/1/14