@@ -21,6 +21,11 @@ certain float,doesnot display (0.01,0.001)
 as for 8byte RAMeditor,strange copy position
 0x8838DBF0 moviezone,pspfat should freeze after search/save...slim user use extraram setting
 
+2011/4/15
+HOOKサーチを強化
+0x003E00008 jr_raをサーチしたときにデコーダー時コピーメニュー+□で0x000001CD breakを
+PSPLINK例外でひっかｋるようにサーチ結果(499件)に適用する
+
 2011/4/12
 NPR/CWCフラグ変更時bit情報を継続するように修正
 JOKER/DMA時はBIT変更できないよう修正
